--- a/css/viaggi/index.html
+++ b/css/viaggi/index.html
@@ -54,7 +54,7 @@
             </nav>
         </div>
         <section class="hero__principale">
-            
+
             <h1>Il bello di scoprire il mondo.<br>Accompagnati e in compagnia</h1>
             <div class="hero__form">
                 <input type="text" placeholder="Dove vuoi andare">
@@ -62,6 +62,58 @@
             </div>
         </section>
     </section>
+
+    <div class="container__centrale">
+        <div class="container__goldLink">
+             <nav class="nav__gold">
+                <ul>
+                    <li>PERCHE BOSCOLO</li>
+                    <li>CHI PARTE CON TE</li>
+                    <li>SCEGLI COME VIAGGIARE</li>
+                </ul>
+                </nav>
+        </div>
+        <div class="titolo__centrale">Realizziamo i tuoi sogni
+            <div class="linea__gold"></div>
+        </div>
+        <div class="tre__centrale">
+            <div class="centrale__uno">
+                <h3>
+                    OLTRE 40 ANNI DI ESPERIENZA
+                </h3>
+                <p> Siamo uno dei maggiori Tour Operator italiani, con una lunga esperienza nel campo dei viaggi di
+                    gruppo organizzati. Dal 1978 mettiamo tutta la passione e l'esperienza possibile a disposizione
+                    dei nostri viaggiatori, che vogliono essere conquistati e non solamente accompagnati.
+                </p>
+            </div>
+            <div class="centrale__due">
+                <h3>
+                    IL BELLO DI VIAGGIARE IN GRUPPO
+                </h3>
+                <p>
+                    I viaggi di gruppo sono parte del nostro DNA: con più di 300 itinerari in oltre 50 destinazioni,
+                    siamo pronti a portarti ovunque, sempre in compagnia di altri viaggiatori appassionati di
+                    scoperta e guidati dall'esperienza dei nostri accompagnatori. Tutto in piena sicurezza e totale
+                    tranquillità.
+                </p>
+            </div>
+            <div class="centrale__tre">
+                <h3>
+                    PARTIAMO DA TUTTA ITALIA
+                </h3>
+                <p>
+                    Abbiamo diversi punti di partenza in tutto il territorio italiano per partecipare ai nostri
+                    viaggi in pullman. In più, in diversi comuni possiamo venirti a prendere direttamente a casa con
+                    una navetta condivisa. Per i viaggi in aereo invece potrai scegliere di partire da tutti i
+                    principali aeroporti italiani.
+                </p>
+            </div>
+        </div>
+        <div class="centrale__button">
+            <p>SCOPRI TUTTI I NOSTRI VIAGGI</p>
+        </div>
+
+    </div>
 
 
 
